// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #135f61;
}

.c0:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with ghost 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: transparent;
  color: #292B3E;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with icon 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with loading 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c1 {
  opacity: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: absolute;
  top: calc(50% - 0.375rem);
  right: 0;
  left: 0;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  border-style: solid;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.02),0 8px 16px 0 rgba(0,0,0,0.01);
  width: 100%;
  height: 0.75rem;
  background-color: white;
  border-color: #d4d4d4;
}

.c5 {
  position: relative;
  top: -1px;
  left: 0;
  border-radius: 0.6rem;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #d4d4d4;
}

.c6 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        />
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size large 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size medium 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size small 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  position: relative;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;
